# reggie2.0

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
gitlab_ci/: gitlab_ci.py  gitlab_ci_tools.py  settings.py
reggie/: __init__.py  analysis.py  analyze_functions.py  args_parser.py  check.py  combinations.py  externalcommand.py  outputdirectory.py  reggie.py  summary.py  tools.py
reggie/common/: common_vars.py
reggie/repas/: repas.py  repas_tools.py
